# ChessIdiot

./: Board.cpp  Board.h  CMakeLists.txt  MoveGenerator.cpp  MoveGenerator.h  Piece.cpp  Piece.h  RookMoveGenerator.cpp  RookMoveGenerator.h  Screen.h  Square.cpp  Square.h  TODO  TerminalDisplay.cpp  TerminalDisplay.h  UbuntuScreen.cpp  UserSession.cpp  UserSession.h  benchmark.sh  benchmarks  fail.txt  globals.h  install.sh  main.cpp  test.cpp  utilities.cpp  utilities.h
incomplete/: Game.cpp  Game.h  Screen.cpp  SelectedSquare.cpp  Square.cpp  Square.h  TerminalDisplay.cpp  TerminalDisplay.h
lib/: BishopMoveGenerator.h  Board.cpp  Board.h  Game.cpp  Game.h  Input.cpp  Input.h  KnightMoveGenerator.cpp  KnightMoveGenerator.h  MoveGenerator.cpp  MoveGenerator.h  PieceMoveGenerator.cpp  QueenMoveGenerator.cpp  RookMoveGenerator.h  Square.cpp  Square.h  TerminalDisplay.cpp  TerminalDisplay.h  UbuntuScreen.cpp  UserSession.cpp  UserSession.h  main.cpp  utilities.cpp  utilities.h
src/: AttackedSquare.cpp  AttackedSquare.h  BishopMoveGeneration.cpp  BishopMoveGeneration.h  BishopMoveGenerator.cpp  BishopMoveGenerator.h  BitBoard.cpp  BitBoard.h  Board.cpp  Board.h  BoardValue.cpp  BoardValue.h  ConstructUci.cpp  ConstructUci.h  Evaluation.cpp  Evaluation.h  Fen.cpp  Fen.h  Game.cpp  Game.h  Globals.h  Init.cpp  Init.h  KingMoveGeneration.cpp  KingMoveGeneration.h  KingMoveGenerator.cpp  KingMoveGenerator.h  KnightMoveGeneration.cpp  KnightMoveGeneration.h  KnightMoveGenerator.cpp  KnightMoveGenerator.h  Lsb.h  Move.cpp  Move.h  MoveCache.cpp  MoveCache.h  MoveGenerationController.cpp  MoveGenerationController.h  MoveGenerator.cpp  MoveGenerator.h  (+49 more)
test/: Fen.cpp  (+69 more)
(+126 files in other folders)
