cmake_minimum_required(VERSION 2.8)
project( main )
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lncurses")
file(GLOB ALL_CPP_FILES "src/*.cpp")
add_executable(main ${ALL_CPP_FILES})
target_link_libraries(main ${CURSES_LIBRARIES})
