cmake_minimum_required(VERSION 2.8)
project( main )
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lncurses")
file(GLOB SOURCE_FILES "src/*.cpp")
file(GLOB TEST_FILES "test/*.cpp")
add_executable(main ${SOURCE_FILES} main.cpp)
target_link_libraries(main ${CURSES_LIBRARIES})
add_subdirectory(lib/googletest)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
add_executable(test ${SOURCE_FILES} ${TEST_FILES} test.cpp)
target_link_libraries(test gtest gtest_main)
